# sindri

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  gen_model.py
examples/: bench_gemm.rs
src/: graph.rs  infer.rs  lib.rs  main.rs  metal_gemm.rs  metal_mps.rs  onnx_loader.rs  ops.rs  tensor.rs
